collapse animation restored & responsive error fixed

--- a/src/pages/Home/Home.style.scss
+++ b/src/pages/Home/Home.style.scss
@@ -360,6 +360,6 @@
 }
 
 // Collapse animation
-.Collapse-Body {
-  transition: unset;
-}
+// .Collapse-Body {
+//   transition: unset;
+// }
